--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin.code.style=official
+propertyStoreFileStr=../app/hzw.jks
+propertyStorePwdStr=14741cc.
+propertyKeyAliasStr=hzw
+propertyKeyPwdStr=14741cc.
+android.injected.testOnly=false
+android.enableResourceOptimizations=false
