--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,25 @@ android {
         versionName "1.0"
     }
 
+    signingConfigs {
+        release {
+            storeFile file(propertyStoreFileStr)
+            storePassword propertyStorePwdStr
+            keyAlias propertyKeyAliasStr
+            keyPassword propertyKeyPwdStr
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -53,4 +68,5 @@ dependencies {
     implementation 'com.jeremyliao:live-event-bus-x:1.7.3'
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.6.1'
+    implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
 }
