--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,5 @@ dependencies {
     implementation 'com.jeremyliao:live-event-bus-x:1.7.3'
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.6.1'
-    implementation 'io.github.h07000223:flycoTabLayout:3.0.0'
+    implementation project(path: ':FlycoTabLayout_Lib')
 }
